--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,7 @@
     <dimen name="status_bar_height">0dp</dimen>
 
     <dimen name="title_height">50dp</dimen>
-
+    <dimen name="size_10sp">10sp</dimen>
     <dimen name="size_14sp">14sp</dimen>
     <dimen name="size_16sp">16sp</dimen>
     <dimen name="size_18sp">18sp</dimen>
