--- a/app/src/main/res/drawable-v24/bg_me_gradient.xml
+++ b/app/src/main/res/drawable-v24/bg_me_gradient.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@color/white"
-        android:centerColor="@color/colorPrimary"
-        android:endColor="@color/bg_gray"
+        android:startColor="@color/colorAccent"
+        android:centerColor="@color/colorOrange"
+        android:endColor="@color/colorRed"
         android:angle="90"
         />
 
