--- a/app/src/main/res/drawable/bg_round_normal_white.xml
+++ b/app/src/main/res/drawable/bg_round_normal_white.xml
@@ -16,10 +16,10 @@
 
             <corners android:radius="65dp"></corners>
             <!--<corners-->
-            <!--android:bottomLeftRadius="6dip"-->
-            <!--android:bottomRightRadius="6dip"-->
-            <!--android:topLeftRadius="6dip"-->
-            <!--android:topRightRadius="6dip" />-->
+                <!--android:bottomLeftRadius="6dip"-->
+                <!--android:bottomRightRadius="6dip"-->
+                <!--android:topLeftRadius="6dip"-->
+                <!--android:topRightRadius="6dip" />-->
         </shape>
     </item>
 
@@ -32,15 +32,15 @@
 
             <gradient
                 android:angle="270"
-                android:endColor="@color/colorPrimary"
-                android:startColor="@color/colorPrimaryLight" />
+                android:endColor="@color/white"
+                android:startColor="@color/white" />
 
             <corners android:radius="65dp"></corners>
             <!--<corners-->
-            <!--android:bottomLeftRadius="6dip"-->
-            <!--android:bottomRightRadius="6dip"-->
-            <!--android:topLeftRadius="6dip"-->
-            <!--android:topRightRadius="6dip" />-->
+                <!--android:bottomLeftRadius="6dip"-->
+                <!--android:bottomRightRadius="6dip"-->
+                <!--android:topLeftRadius="6dip"-->
+                <!--android:topRightRadius="6dip" />-->
         </shape>
     </item>
 
