--- a/app/src/main/res/layout/fragment_list_extask.xml
+++ b/app/src/main/res/layout/fragment_list_extask.xml
@@ -6,24 +6,68 @@
     android:layout_height="match_parent"
     android:name="com.extrace.ui.ExTaskListFragment"
     tools:listitem="@layout/fragment_list_extask_item">
+    <LinearLayout
+        android:id="@+id/switchbutton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="3dp"
+        android:paddingLeft="@dimen/size_18sp"
+        android:paddingRight="@dimen/size_18sp"
+        android:background="@color/bg_gray">
+        <Button
+            android:id="@+id/unfinished"
+            android:text="未处理"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:background="@drawable/bg_round_left_green"/>
+        <Button
+            android:id="@+id/finished"
+            android:text="已处理"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:textColor="@color/colorPrimary"
+            android:background="@drawable/bg_round_right_trans"/>
+    </LinearLayout>
+
+
 
     <android.support.v7.widget.RecyclerView
 
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_below="@+id/switchbutton"
+        android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
         android:background="@color/bg_gray"/>
-    <Button
-        android:layout_alignParentBottom="true"
-        android:id="@+id/button1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Send Request" />
+
     <com.extrace.util.EmptyView
         android:id="@+id/empty"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </com.extrace.util.EmptyView>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/size_14sp"
+        android:background="@drawable/bg_round_normal_white">
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:background="@mipmap/icon_sign" />
+    </LinearLayout>
+ <!--   <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />-->
 </RelativeLayout >
