--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -15,9 +15,10 @@
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:textColor="@color/white"
-        android:paddingLeft="@dimen/size_16sp"
+        android:paddingLeft="@dimen/size_10sp"
+        android:drawableLeft="@mipmap/ic_back"
         android:background="@color/transparent"
-        android:text="返回"/>
+        android:text=" "/>
     <TextView
         android:id="@+id/title_text"
         android:layout_width="wrap_content"
